--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<title>Svelte app</title>
 	<script src="https://cdn.tailwindcss.com"></script>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel='icon' type='image/png' href='https://tweedekamer2023.stemwijzer.nl/gfx/img/favicon.ico'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
