--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
 	<link rel='icon' type='image/png' href='https://tweedekamer2023.stemwijzer.nl/gfx/img/favicon.ico'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
-
+	<script>
+		window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+	  </script>
+	  <script defer src="/_vercel/insights/script.js"></script>
 	<script defer src='/build/bundle.js'></script>
 </head>
 
