--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
+	<title>Partijwijzer - Vind jouw politieke match</title>
+	<meta name="description" content="Ontdek welke politieke partij het beste bij jouw standpunten past">
+	
+	<!-- Fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+	
 	<script src="https://cdn.tailwindcss.com"></script>
 
 	<link rel='icon' type='image/png' href='https://tweedekamer2025.stemwijzer.nl/gfx/img/favicon.ico'>
